# ovseg

./: flake.nix  pyproject.toml
src/ovseg/model/: EmbeddingWrapper.py
src/ovseg/networks/: resUNet.py
src/ovseg/run/: run_embeddings.py  run_inference.py
